// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordPage should match default section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <form
      className="mw-500"
    >
      <h3
        className="mt-3"
      >
        Password assistance
      </h3>
      <p
        className="mb-4"
      >
        Please enter your log-in or recovery email address below and we will send you an email with instructions.
      </p>
      <div
        className="form-group mb-0 w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="forgot-password-input"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
          value=""
        />
        <span />
      </div>
      <button
        className="mt-2 field-link small"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Need other help signing in?
      </button>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        />
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-null btn-primary mt-3 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Recover my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ForgotPasswordPage should match forbidden section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <form
      className="mw-500"
    >
      <div
        className="fade alert alert-danger show"
        role="alert"
      >
        <div
          className="alert-heading h4"
        >
          An error occurred.
        </div>
        <ul>
          <li>
            Your previous request is in progress, please try again in a few moments.
          </li>
        </ul>
      </div>
      <h3
        className="mt-3"
      >
        Password assistance
      </h3>
      <p
        className="mb-4"
      >
        Please enter your log-in or recovery email address below and we will send you an email with instructions.
      </p>
      <div
        className="form-group mb-0 w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="forgot-password-input"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
          value=""
        />
        <span />
      </div>
      <button
        className="mt-2 field-link small"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Need other help signing in?
      </button>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        />
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-forbidden btn-primary mt-3 btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Recover my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ForgotPasswordPage should match pending section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <form
      className="mw-500"
    >
      <h3
        className="mt-3"
      >
        Password assistance
      </h3>
      <p
        className="mb-4"
      >
        Please enter your log-in or recovery email address below and we will send you an email with instructions.
      </p>
      <div
        className="form-group mb-0 w-100"
      >
        <span />
        <input
          aria-describedby=""
          className="form-control"
          id="forgot-password-input"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          required={true}
          type="email"
          value=""
        />
        <span />
      </div>
      <button
        className="mt-2 field-link small"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-caret-right fa-w-6 mr-1"
          data-icon="caret-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Need other help signing in?
      </button>
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      >
        <div
          style={
            Object {
              "padding": ".1px 0",
            }
          }
        />
      </div>
      <button
        aria-disabled={true}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary mt-3 disabled btn btn-primary"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          <span
            className="pgn__stateful-btn-icon"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-spinner fa-w-16 fa-spin "
              data-icon="spinner"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
          Recover my password
        </span>
      </button>
    </form>
  </div>
</div>
`;
